--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "xlsx": "^0.18.5"
